--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             const response = await fetch('https://api-inference.huggingface.co/models/facebook/bart-large-cnn', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer hf_your_token_here', // Sign up at huggingface.co for a free token
+                    'Authorization': 'Bearer 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', // Sign up at huggingface.co for a free token
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ inputs: chapterText.slice(0, 1000) }) // Limit to avoid API limits
